# treer-sso-sdk

./: .gitignore  CHANGELOG.md  GITHUB_RELEASE.md  MANIFEST.in  README.md  RELEASE.md  a.py  pyproject.toml
.github/workflows/: bump-version.yml  publish.yml  test.yml
examples/: advanced_usage.py  basic_usage.py
scripts/: build.py
src/treer_sso_sdk/: __init__.py  client.py  config.py  exceptions.py  http_client.py  interfaces.py  models.py  utils.py
tests/: test_config.py
